<resources>
    <string name="app_name">Traveller</string>
    <string name="person_icon">Person Icon</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_password">Please enter your password</string>
    <string name="error_password_message">Your password must have at least 6 characters long</string>
    <string name="error_empty_message">This field can not be empty</string>
    <string name="error_invalid_email_message">Invalid Email Address</string>
    <string name="splash_moon_icon">Moon Icon</string>
    <string name="splash_welcome_to">Welcome to…</string>
    <string name="splash_logo_desc">Scan your travel identity in a flash time</string>
    <string name="splash_plane_icon">Plane Icon</string>
    <string name="splash_cloud_icon">Cloud Icon</string>
    <string name="splash_person">Person-Splash</string>
    <string name="regis_title">Sign Up</string>
    <string name="regis_enter_name">Please enter your name</string>
    <string name="regis_options">Already have an account?</string>
    <string name="regis_redirect_login"><u>Login</u></string>
    <string name="login_clouds_icon">Clouds Icon</string>
    <string name="login_title">Login</string>
    <string name="login_options">or login with</string>
    <string name="login_google">Google</string>
    <string name="login_redirect">Don\'t have an account?</string>
    <string name="login_redirect_signup"><u>SignUp</u></string>
    <string name="success_image">Success</string>
    <string name="success_desc">Please make a payment according to the booked ticket and please check your email for E-Ticket information.</string>
    <string name="success_btn">Book another Flight</string>
    <string name="success_btn1">Go to History Page</string>
    <string name="success_title">Transaction Completed</string>
    <string name="scan_ktp_title">Scan ID Card (KTP)</string>
    <string name="scan_ktp_desc">Adjust your ID Card (KTP) according to the box above to start scanning</string>
    <string name="back">Back</string>
    <string name="error_image">Error Image</string>
    <string name="error_text_ocr">An error occurred while scanning, please do a rescan</string>
    <string name="ok">OK</string>
    <string name="scan_result">Scan Result</string>
    <string name="scan_result_desc">Please check the data listed down below.</string>
    <string name="title">Title</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="id_card_number_nik">ID Card Number (NIK)</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="ocr_warning_desc">Is the data above correct?</string>
    <string name="warning_desc2">If not, please <u>correct the form data</u> above or press <u>the retry button</u> next to re-scan the ID card.</string>
    <string name="contact_title">Contact Information for E-Ticket delivery</string>
    <string name="dummy_person">Gojou Satoru</string>
    <string name="dummy_email">greentea99@gmail.com</string>
    <string name="edit_email">Edit</string>
    <string name="submit">Submit</string>
    <string name="bg_header_profile">background header profile</string>
    <string name="profile">Profile</string>
    <string name="content_profile">content profile</string>
    <string name="logout">Logout</string>
    <string name="about_Traveller"><u>About Traveller</u></string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="card_profile">Card Profile</string>
    <string name="turn_camera">Switch Camera</string>
    <string name="flashlight">Flashlight</string>
    <string name="ic_back">icon back</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_changes">Save Changes</string>
    <string name="Flight_HomeActivity">Flight</string>
    <string name="flight">Flights</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="textview_dummy">TextView</string>
    <string name="mr_dummy">Mr.</string>
    <string name="wni_dummy">WNI</string>
    <string name="nik_dummy">1234567890123456</string>
    <string name="man_dummy">Man</string>
    <string name="single_dummy">Single</string>
    <string name="retry_button">Retry Button</string>
    <string name="email_user">user54@gmail.com</string>
    <string name="username_user">Username</string>
    <string name="city_departure">Select City Departure</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="city_destination">Select City Destination</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="passengers">Passengers</string>
    <string name="passenger_default">1 passenger</string>
    <string name="seat_class">Seat Class</string>
    <string name="seat_class_default">Economy</string>
    <string name="search_btn">Search</string>
    <string name="city_default">Balikpapan</string>
    <string name="destination_icon">destination icon</string>
    <string name="time_departure_default">16:55</string>
    <string name="code_city_departure_default">BPN</string>
    <string name="direct">Direct</string>
    <string name="time_destination_default">18:00</string>
    <string name="time_total">2h 5m</string>
    <string name="code_city_destination_default">CGK</string>
    <string name="ticket_price_default">Rp 877.500</string>
    <string name="pax">/pax</string>
    <string name="plane_logo">plane logo</string>
    <string name="plane_name_default">Lion Air</string>
    <string name="luggage">luggage</string>
    <string name="buy_btn">Buy</string>
    <string name="SearchListAdapter_flightDuration">%1sh %2sm</string>
    <string name="SearchListAdapter_direct">Direct</string>
    <string name="FlightSearchResultActivity_paxTv"> · %1s pax · </string>
    <string name="booking_id">Booking ID</string>
    <string name="booking_id_value">721123654</string>
    <string name="date_default">April 2022</string>
    <string name="departure_default">Jakarta</string>
    <string name="route_icon">→</string>
    <string name="destination_default">Batam</string>
    <string name="verified">verified</string>
    <string name="travel_insurance_flight">Travel Insurance (Flight)</string>
    <string name="HistoryAdapter_PurchaseStatus">Purchase %1s</string>
    <string name="flight_eticket">Flight E-ticket</string>
    <string name="airline_booking_code">Airline Booking Code</string>
    <string name="booking_code">C22KY01</string>
    <string name="depart_time">14:40</string>
    <string name="arrival_time">15:40</string>
    <string name="passenger">Passenger</string>
    <string name="jakarta">Jakarta</string>
    <string name="detail_user_info">User haven\'t filled out the form</string>
    <string name="info">This airline doesn’t allow passenger name correction</string>
    <string name="error_400">400 Error</string>
    <string name="error">Something went wrong</string>
    <string name="error_401">Error 401</string>
    <string name="button_back">button back image</string>
    <string name="search_back">Back Icon</string>
    <string name="search_city_default">Jakarta</string>
    <string name="search_destination_icon">Arrow Icon</string>
    <string name="search_city_destination_default">Bali</string>
    <string name="search_date_default">Wed, 11 May</string>
    <string name="search_default_pack">· 1 pax ·</string>
    <string name="search_class_default">Economy</string>
    <string name="search_time_departure_default">12.53</string>
    <string name="search_code_departure_default">HLP</string>
    <string name="search_route_icon">Route Icon</string>
    <string name="search_total_time">2h 5m</string>
    <string name="search_direct">Direct</string>
    <string name="search_time_destination_default">14.58</string>
    <string name="search_code_destination_default">DPN</string>
    <string name="search_price_default">Rp. 877.500</string>
    <string name="search_pax">/pax</string>
    <string name="search_plane_logo">Plane Logo</string>
    <string name="search_plane_default">Lion Air</string>
    <string name="search_luggage">Luggage</string>
    <string name="search_btn_buy">Buy</string>
    <string name="eula_agreement"><u>EULA Agreement</u></string>
    <string name="eula_login_agreement">By logging in, you are agreeing to our</string>
</resources>